--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-spring.application.name=test
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventoryDB
+spring.datasource.username=LinkTIC
+spring.datasource.password=LinkTIC01234
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# JPA / Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update       # use 'validate' or migrations in prod
+# hibernate dialect generally autodetected; if you must set:
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+spring.application.name=inventory
 debug=true
-server.port=9090
-
-#Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbcohan
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-logging.level.org.springframework.security=DEBUG
+server.port=8082
