Fix: Se ajusto configuraciones de ApiKeyFilter, SecurityConfig y de Logger.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.application.name=inventory
 debug=true
 server.port=8082
+logging.level.org.springframework.security=DEBUG
