--- a/pom.xml
+++ b/pom.xml
@@ -147,17 +147,23 @@
 	    <artifactId>resilience4j-spring-boot3</artifactId>
 	  </dependency>-->
 	
+	   <dependency>
+		    <groupId>io.github.resilience4j</groupId>
+		    <artifactId>resilience4j-spring-boot3</artifactId>
+		    <version>2.2.0</version>
+		  </dependency>
+		  
 	  <dependency>
 	    <groupId>org.testcontainers</groupId>
 	    <artifactId>mssqlserver</artifactId>
 	    <scope>test</scope>
 	  </dependency>
 	  
-	  	<dependency>
+	  	<!--<dependency>
 		  <groupId>net.logstash.logback</groupId>
 		  <artifactId>logstash-logback-encoder</artifactId>
 		  <version>7.4</version>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 		  <groupId>org.springframework.boot</groupId>
