Fix: Se realizo ajustes finales del servicio de productos y compras

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventoryDB
-spring.datasource.username=LinkTIC
-spring.datasource.password=LinkTIC01234
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventoryDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=linktic
+spring.datasource.password=linktic2025
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA / Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update       # use 'validate' or migrations in prod
+spring.jpa.hibernate.ddl-auto=none       
+# use 'validate' or migrations in prod
 # hibernate dialect generally autodetected; if you must set:
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
@@ -13,3 +14,4 @@ spring.application.name=inventory
 debug=true
 server.port=8082
 logging.level.org.springframework.security=DEBUG
+spring.main.allow-bean-definition-overriding=true
